fix css. it doesn't match the design yet but it's better than what we had before, when the logged in message was hidden behind a click.

--- a/nyc/q/debate.css
+++ b/nyc/q/debate.css
@@ -578,5 +578,5 @@ and (max-width : 930px) {
 		}
     
 }
-.sidecar { width: 34%; line-height: 1em; margin-bottom: 1em; }
+.sidecar { width: 34%; line-height: 1em; margin-top: 1em; }
 /*.question-block*/
